# protohackers

./: Cargo.toml  README.md
budget_chat/: Cargo.toml
budget_chat/src/: main.rs  state.rs
means_to_an_end/: Cargo.toml
means_to_an_end/src/: main.rs
mob_in_the_middle/: Cargo.toml
mob_in_the_middle/src/: main.rs  semicolon_codec.rs
prime_time/: Cargo.toml
prime_time/examples/: client.rs
prime_time/src/: main.rs
smoke_test/: Cargo.toml
smoke_test/src/: main.rs
speed_daemon/: Cargo.toml
speed_daemon/src/: codec.rs  main.rs  state.rs
unusual_database_program/: Cargo.toml
unusual_database_program/src/: main.rs
