[package]
name = "means_to_an_end"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["full"] }
anyhow = { version = "1.0.0", feature = ["backtrace"] }
byteorder = "1.4.3"