[package]
name = "mob_in_the_middle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["full"] }
anyhow = { version = "1.0.0", feature = ["backtrace"] }
tokio-util = {version = "0.7.8", features = ["codec"]}
futures = "0.3.28"
fancy-regex = "0.11.0"
lazy_static = "1.4.0"
