[package]
name = "prime_time"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.31.0", features = ["full"] }
anyhow = { version = "1.0.0", feature = ["backtrace"] }
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1"
